[package]
authors = ["Sanemat <o.gata.ken@gmail.com>"]
categories = ["development-tools"]
description = "checkstyle formatter."
include = [
    "src/**/*",
    "Cargo.toml",
    "changelog.md",
    "readme.md",
    "license-apache",
    "license-mit",
]
keywords = ["checkstyle"]
license = "MIT/Apache-2.0"
name = "checkstyle_formatter"
repository = "https://github.com/packsaddle/rust-checkstyle_formatter"
version = "1.0.2"

[badges.appveyor]
project_name = "sanemat/rust-checkstyle_formatter"
repository = "packsaddle/rust-checkstyle_formatter"

[badges.travis-ci]
repository = "packsaddle/rust-checkstyle_formatter"

[dependencies]
quick-xml = "0.9.4"
